--- a/index.html
+++ b/index.html
@@ -571,6 +571,102 @@ https://templatemo.com/tm-518-sentra
                                             </div>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/renato-06.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Rygar the Legendary Warrior</h4>
+                                                <span>+1 Renato <strong>(pergunta)</strong> Sorteio
+                                                    <strong>ZERO</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Rygar é um jogo de arcade criado pela Tecmo em 1986 e originalmente
+                                                    lançado no Japão como Argos No Senshi. É um jogo de plataforma onde
+                                                    o jogador assume o papel como o "Guerreiro Legendário", enquanto
+                                                    batalha em uma paisagem hostil. Incluía um jogo rico de ataque e
+                                                    capacidades de movimento.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/ambrosio-08.jpeg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Metroid</h4>
+                                                <span>+1 Ambrósio <strong>(pergunta)</strong> +1 Camilo
+                                                    <strong>(resposta)</strong></span>
+                                                <p><strong>Este inimigo pertence à qual franquia?</strong>
+                                                    <br />
+                                                    Metroid é uma franquia japonesa de jogos de ação e aventura criada
+                                                    pela Nintendo. Os jogadores controlam o caçador de recompensas Samus
+                                                    Aran, que protege a galáxia dos Piratas Espaciais e suas tentativas
+                                                    de dominar o poder das criaturas parasitas Metroid.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/camilo-02.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Horizon Zero Dawn</h4>
+                                                <span>+1 Camilo <strong>(pergunta)</strong> Sorteio
+                                                    <strong>UM</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Horizon Zero Dawn é um jogo eletrônico de RPG de ação desenvolvido
+                                                    pela Guerrilla Games e publicado pela Sony Interactive
+                                                    Entertainment. Foi lançado em 28 de fevereiro de 2017 para
+                                                    PlayStation 4 e em 7 de agosto de 2020 para Microsoft Windows.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/dida-02.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Harvest Moon</h4>
+                                                <span>+1 Dida <strong>(pergunta)</strong> Sorteio
+                                                    <strong>ZERO</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    É um RPG de simulação de fazendadesenvolvido pela Amccus para o
+                                                    Super Nintendo Entertainment System . O jogo foi lançado pela
+                                                    primeira vez no Japão em 1996, na América do Norte em 1997 e na
+                                                    Europa em 1998. A versão europeia foi enviada com localizações de
+                                                    idiomas para Alemanha e França. É o primeiro jogo da série Story of
+                                                    Seasons , anteriormente conhecida como asérie Harvest Moon nos
+                                                    territórios ocidentais. O jogo foi relançado no Satellaview ,
+                                                    Nintendo 3DS , Wii e Wii U.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                    <div class="item">
+                                        <img src="img/rodada-final/jux-04.jpeg" alt="" width="306" height="230">
+                                        <div class="text-content">
+                                            <h4>Moto Racer 2</h4>
+                                            <span>+1 Jux <strong>(pergunta)</strong> +1 Camilo
+                                                <strong>(resposta)</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                <br />
+                                                Moto Racer 2 é o segundo jogo da série Moto Racer, lançado em 31 de
+                                                agosto de 1998 para playstation, e em 30 de novembro de 1998 para
+                                                computador. Foi desenvolvido pela Delphine Software International, e
+                                                lançado pela Eletronic Arts. Seu antecessor é o jogo Moto Racer e seu
+                                                sucessor é o jogo Moto Racer 3.
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            </p>
+                                        </div>
+                                    </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div id="tab2">
