--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-518-sentra
             <nav>
                 <ul class="nav navbar-nav">
                     <li><a href="#top">Home</a></li>
-                    <!--<li><a href="#video">Presentation</a></li>-->
+                    <li><a href="#video">Resultado Final</a></li>
                     <li><a href="#blog">Registro de Pontos</a></li>
                     <li><a href="#featured">Cascos</a></li>
                     <li><a href="#projects">Memes</a></li>
@@ -69,6 +69,13 @@ https://templatemo.com/tm-518-sentra
                     </a>
                 </li>
                 <li>
+                    <a href="#video">
+                        <span class="rect"></span>
+                        <span class="circle"></span>
+                        Resultado Final
+                    </a>
+                </li>
+                <li>
                     <a href="#blog">
                         <span class="rect"></span>
                         <span class="circle"></span>
@@ -89,15 +96,6 @@ https://templatemo.com/tm-518-sentra
                         Memes
                     </a>
                 </li>
-                <!--
-                <li>
-                    <a href="#video">
-                        <span class="rect"></span>
-                        <span class="circle"></span>
-                        Presentation
-                    </a>
-                </li>
-            -->
                 <!--
                 <li>
                     <a href="#contact">
@@ -190,40 +188,45 @@ https://templatemo.com/tm-518-sentra
 
 
     <div class="page-content">
-        <!--
         <section id="video" class="content-section">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <h1>This is a <em>company</em> presentation.</h1>
-                        <p>Praesent pellentesque efficitur magna, sed pellentesque neque malesuada vitae.</p>
+                        <h1>Renato &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>25 pontos</em></h1>
                     </div>
-                    <div class="text-content">
-                        <p>In eget ipsum sed lorem vehicula luctus. Curabitur non dolor rhoncus, hendrerit justo sit
-                            amet, vestibulum turpis. Pellentesque id auctor tellus, vel ultricies augue. Duis
-                            condimentum aliquet blandit. Fusce rhoncus et eros ut pharetra. Phasellus convallis
-                            ultricies ligula ac gravida.</p>
+                    <div class="section-heading">
+                        <h1>Ambrósio &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>24 pontos</em></h1>
                     </div>
-                    <div class="accent-button button">
-                        <a href="#blog">Continue Reading</a>
+                    <div class="section-heading">
+                        <h1>Camilo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>24 pontos</em></h1>
                     </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="box-video">
-                        <div class="bg-video"
-                            style="background-image: url(https://unsplash.imgix.net/photo-1425036458755-dc303a604201?fit=crop&fm=jpg&q=75&w=1000);">
-                            <div class="bt-play">Play</div>
-                        </div>
-                        <div class="video-container">
-                            <iframe width="100%" height="520"
-                                src="https://www.youtube.com/embed/j-_7Ub-Zkow?rel=0&amp;showinfo=0" frameborder="0"
-                                allowfullscreen="allowfullscreen"></iframe>
-                        </div>
+                    <div class="section-heading">
+                        <h1>Dida &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>18 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Hrone &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>17 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Jux &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>14 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Marquinhos <em>13 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Igor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>7 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Buera &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>7 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Lukinhas &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>6 pontos</em></h1>
+                    </div>
+                    <div class="section-heading">
+                        <h1>Sávio &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>5 pontos</em></h1>
                     </div>
                 </div>
             </div>
         </section>
-        -->
         <section id="blog" class="content-section">
             <div class="section-heading">
                 <h1>Registo<br><em>Pontos</em></h1>
