--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@ https://templatemo.com/tm-518-sentra
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
+                        <h1><em>Resultado Final</em></h1>
+                    </div>
+                    <div class="section-heading">
                         <h1>Renato &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>25 pontos</em></h1>
                     </div>
                     <div class="section-heading">
